fea:customer http interface has been added
