# backend/customer/internal/server/http.go
@@ -1,6 +1,7 @@
 package server
 
 import (
+	c1 "customer/api/customer/v1"
 	v1 "customer/api/helloworld/v1"
 	"customer/internal/conf"
 	"customer/internal/service"
@@ -11,7 +12,7 @@ import (
 )
 
 // NewHTTPServer new an HTTP server.
-func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, logger log.Logger) *http.Server {
+func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, customerService *service.CustomerService, logger log.Logger) *http.Server {
 	var opts = []http.ServerOption{
 		http.Middleware(
 			recovery.Recovery(),
@@ -27,6 +28,7 @@ func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, logger log.L
 		opts = append(opts, http.Timeout(c.Http.Timeout.AsDuration()))
 	}
 	srv := http.NewServer(opts...)
+	c1.RegisterCustomerHTTPServer(srv, customerService)
 	v1.RegisterGreeterHTTPServer(srv, greeter)
 	return srv
 }
